--- a/Project/Analysis.ipynb
+++ b/Project/Analysis.ipynb
@@ -4342,7 +4342,7 @@
     "from openai.embeddings_utils import get_embedding\n",
     "\n",
     "# Convert name column to vectors using Word2Vec to convert them to vector embeddings to be used in modeling\n",
-    "openai.api_key = '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'\n",
+    "openai.api_key = '...'\n",
     "\n",
     "\n",
     "def text_to_vector(text, count):\n",
