--- a/Project/Deliverable.ipynb
+++ b/Project/Deliverable.ipynb
@@ -845,7 +845,7 @@
    "outputs": [],
    "source": [
     "# This code takes a long time to run. As such, we have saved the output in a csv file and have loaded it in the previous cell\n",
-    "openai.api_key = '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'\n",
+    "openai.api_key = ''\n",
     "\n",
     "def text_to_vector(text):\n",
     "    if pd.isna(text):\n",
